--- a/examples/circlegraph/src/main/ts/circlegraph.css
+++ b/examples/circlegraph/src/main/ts/circlegraph.css
@@ -1,5 +1,5 @@
 /********************************************************************************
- * Copyright (c) 2017-2018 TypeFox and others.
+ * Copyright (c) 2017-2019 TypeFox and others.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -14,16 +14,43 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
 
-rootProject.name = 'sprotty-server'
+svg {
+    width: 100%;
+    height: 600px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #bbb;
+    background-color: #f8f8ff;
+    margin-top: 20px;
+}
 
-include 'org.eclipse.sprotty'
-include 'org.eclipse.sprotty.server'
-include 'org.eclipse.sprotty.layout'
-include 'org.eclipse.sprotty.xtext'
+.sprotty-node {
+    fill: #bbf;
+    stroke: #88b;
+    stroke-width: 3;
+}
 
-file('examples').eachDir { dir ->
-	if (dir.name != 'node_modules') {
-		include "example-${dir.name}"
-		project(":example-${dir.name}").projectDir = dir
-	}
+.sprotty-text {
+    font-size: 16pt;
+    text-anchor: middle;
+}
+
+.sprotty-edge {
+    fill: none;
+    stroke: #8bb;
+    stroke-width: 2;
+}
+
+.sprotty-node.selected {
+    stroke: #dd8;
+    stroke-width: 6;
+}
+
+.sprotty-missing {
+    stroke-width: 1;
+    stroke: #f00;
+    fill: #f00;
+    font-family: SansSerif;
+    font-size: 14pt;
+    text-anchor: middle;
 }
